--- a/.formatted/portsandprotocols.html
+++ b/.formatted/portsandprotocols.html
@@ -202,19 +202,19 @@
                   <th>Protocol<br>Port</th>
                 </tr>
                 <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_HTTPS" id="dnsoverhttps">HTTPS</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttps"><code>https://dns.sainternet.xyz/dns-query</code></a></td>
+                  <td id="dnsoverhttps"><a href="https://en.wikipedia.org/wiki/DNS_over_HTTPS" id="dnsoverhttpslink">HTTPS</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttpslink"><code>https://dns.sainternet.xyz/dns-query</code></a></td>
                   <td>TCP<br><code>443</code></td>
                 </tr>
                 <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/HTTP/3" id="dnsoverhttp3">HTTP/3</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttp3"><code>h3://dns.sainternet.xyz/dns-query</code></a></td>
+                  <td id="dnsoverhttp3"><a href="https://en.wikipedia.org/wiki/HTTP/3" id="dnsoverhttp3link">HTTP/3</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttp3link"><code>h3://dns.sainternet.xyz/dns-query</code></a></td>
                   <td>UDP<br><code>443</code></td>
                 </tr>
                 <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_TLS" id="dnsovertls">TLS</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsovertls"><code>tls://dns.sainternet.xyz:853</code></a></td>
+                  <td id="dnsovertls"><a href="https://en.wikipedia.org/wiki/DNS_over_TLS" id="dnsovertlslink">TLS</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsovertlslink"><code>tls://dns.sainternet.xyz:853</code></a></td>
                   <td>TCP<br><code>853</code></td>
                 </tr>
                 <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_QUIC" id="dnsoverquic">QUIC</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsoverquic"><code>quic://dns.sainternet.xyz:853</code></a></td>
+                  <td id="dnsoverquic"><a href="https://en.wikipedia.org/wiki/DNS_over_QUIC" id="dnsoverquiclink">QUIC</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsoverquiclink"><code>quic://dns.sainternet.xyz:853</code></a></td>
                   <td>UDP<br><code>853</code></td>
                 </tr>
               </table>
@@ -224,7 +224,7 @@
             </p>
             <ul>
               <li>For <a href="connecttosainternet.html#androidprivatedns">Android Private DNS</a> use just the <code>dns.sainternet.xyz</code> domain without <code>proto://</code>, <code>/path</code> or <code>:port</code> sections.</li>
-              <li>You can instead use <code>unfiltered-client.dns.sainternet.xyz</code> for (mostly) unfiltered DNS resolution.</li>
+              <li>Unfiltered DNS resolution is available via the <code>unfiltered-client.dns.sainternet.xyz</code> domain with the <code>unfiltered-client</code> identifier.</li>
             </ul>
             <p class="embiggen sainternet-subheader-centered" id="unencrypteddns">
               Unencrypted DNS
@@ -236,11 +236,11 @@
                   <th>Port</th>
                 </tr>
                 <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/Transmission_Control_Protocol" id="dnsovertcp">TCP</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsovertcp"><code>119.224.127.171</code><br><code id="alt-ipv6-1">::ffff:77e0:7fab</code><code class="mdl-tooltip mdl-tooltip--top" for="alt-ipv6-1">::ffff:119.224.127.171</code></a></td>
+                  <td id="dnsovertcp"><a href="https://en.wikipedia.org/wiki/Transmission_Control_Protocol" id="dnsovertcplink">TCP</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsovertcplink"><code>119.224.127.171</code><br><code id="alt-ipv6-1">::ffff:77e0:7fab</code><code class="mdl-tooltip mdl-tooltip--top" for="alt-ipv6-1">::ffff:119.224.127.171</code></a></td>
                   <td><code>53</code></td>
                 </tr>
                 <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/User_Datagram_Protocol" id="dnsoverudp">UDP</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsoverudp"><code>119.224.127.171</code><br><code id="alt-ipv6-2">::ffff:77e0:7fab</code><code class="mdl-tooltip mdl-tooltip--top" for="alt-ipv6-2">::ffff:119.224.127.171</code></a></td>
+                  <td id="dnsoverudp"><a href="https://en.wikipedia.org/wiki/User_Datagram_Protocol" id="dnsoverudplink">UDP</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsoverudplink"><code>119.224.127.171</code><br><code id="alt-ipv6-2">::ffff:77e0:7fab</code><code class="mdl-tooltip mdl-tooltip--top" for="alt-ipv6-2">::ffff:119.224.127.171</code></a></td>
                   <td><code>53</code></td>
                 </tr>
               </table>
