saint-lascivious.github.io: update fucky verbiage
Changes to be committed:
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   connecttosainternet.html
 - modified:   newsandupdates.html
 - modified:   portsandprotocols.html
 - modified:   serviceworker.min.js

--- a/.formatted/connecttosainternet.html
+++ b/.formatted/connecttosainternet.html
@@ -204,7 +204,7 @@
               Notes:
             </p>
             <ul>
-              <li>Unfiltered DNS resolution is available via the <code>unfiltered-client.dns.sainternet.xyz</code> domain with the <code>unfiltered-client</code> identifier.</li>
+              <li>Unfiltered DNS resolution is available via <code>unfiltered-client.dns.sainternet.xyz</code>.</li>
             </ul>
           </div>
         </div>
@@ -291,7 +291,7 @@
               Notes:
             </p>
             <ul>
-              <li>Unfiltered DNS resolution is available via the <code>unfiltered-client.dns.sainternet.xyz</code> domain with the <code>unfiltered-client</code> identifier.</li>
+              <li>Unfiltered DNS resolution is available via <code>https://unfiltered-client.dns.sainternet.xyz/dns-query</code>.</li>
             </ul>
           </div>
         </div>
@@ -317,7 +317,7 @@
             </p>
             <ul>
               <li>Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> to prevent it from bypassing Sainternet<br>(Ignored if manually configured.)</li>
-              <li>Unfiltered DNS resolution is available via the <code>unfiltered-client.dns.sainternet.xyz</code> domain with the <code>unfiltered-client</code> identifier.</li>
+              <li>Unfiltered DNS resolution is available via <code>https://unfiltered-client.dns.sainternet.xyz/dns-query</code>.</li>
             </ul>
           </div>
         </div>
