--- a/.formatted/portsandprotocols.html
+++ b/.formatted/portsandprotocols.html
@@ -223,8 +223,10 @@
               Notes:
             </p>
             <ul>
-              <li>For <a href="connecttosainternet.html#androidprivatedns">Android Private DNS</a> use just the <code>dns.sainternet.xyz</code> domain without <code>proto://</code>, <code>/path</code> or <code>:port</code> sections.</li>
-              <li>Unfiltered DNS resolution is available via the <code>unfiltered-client.dns.sainternet.xyz</code> domain with the <code>unfiltered-client</code> identifier.</li>
+              <li>Hover or mouse-over encryption links to show query paths.</li>
+              <li>Filtered DNS resolution is available via <code>dns.sainternet.xyz</code>.</li>
+              <li>Unfiltered DNS resolution is available via <code>unfiltered-client.dns.sainternet.xyz</code>.</li>
+              <li>For <a href="connecttosainternet.html#androidprivatedns">Android Private DNS</a> use just the <code>dns.sainternet.xyz</code> or <code>unfiltered-client.dns.sainternet.xyz</code> domains without <code>proto://</code>, <code>/path</code> or <code>:port</code> sections.</li>
             </ul>
             <p class="embiggen sainternet-subheader-centered" id="unencrypteddns">
               Unencrypted DNS
