--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -220,10 +220,10 @@
           <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
             <h3 class="embiggen">Old Blog, New Tricks</h3>
             <p class="embiggen" id="datetime">
-              first posted on Wednesday, 13 September 2023 00:20+12:00 (NZST)<br>updated on Wednesday, 13 September 2023 07:45+12:00 (NZST)
+              first posted on Wednesday, 13 September 2023 00:20+12:00 (NZST)<br>updated on Thursday, 14 September 2023 22:15+12:00 (NZST)
             </p>
             <p>
-              If you <a href="connecttosainternet.html#connecttosainternet">Connect to Sainternet</a> using an <a href="portsandprotocols.html#encrypteddns" class="embiggen">Encrypted DNS</a> protocol, it is now possible to add an <code>unfiltered-client</code> identifier to your query destination for (mostly) unfiltered DNS resolution.
+              If you <a href="connecttosainternet.html#connecttosainternet">Connect to Sainternet</a> using a domain and an <a href="portsandprotocols.html#encrypteddns" class="embiggen">Encrypted DNS</a> protocol, it is now possible to add an <code>unfiltered-client</code> identifier to your query destination for (mostly) unfiltered DNS resolution.
             </p>
             <p>
               Minor filtering is performed for rate limiting and abuse mitigation, but otherwise no blocking is performed.
@@ -257,7 +257,7 @@
             </p>
             <ul>
               <li>For <a href="connecttosainternet.html#androidprivatedns">Android Private DNS</a> use just the <code>unfiltered-client.dns.sainternet.xyz</code> domain without <code>proto://</code>, <code>/path</code> or <code>:port</code> sections.</li>
-              <li>Filtered DNS resolution is still available via the <code>dns.sainternet.xyz</code> domain without the <code>unfiltered-client</code> identifier.</li>
+              <li>Filtered DNS resolution is available via <code>dns.sainternet.xyz</code>.</li>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="everycatdeservesscritchesalways">
