--- a/.formatted/portsandprotocols.html
+++ b/.formatted/portsandprotocols.html
@@ -223,7 +223,7 @@
               Notes:
             </p>
             <ul>
-              <li>Hover or mouse-over encryption links to show query paths.</li>
+              <li>Hover or mouse-over encryption links to show sainternet DNS query paths.</li>
               <li>Filtered DNS resolution is available via <code>dns.sainternet.xyz</code>.</li>
               <li>Unfiltered DNS resolution is available via <code>unfiltered.dns.sainternet.xyz</code>.</li>
               <li>For <a href="connecttosainternet.html#androidprivatedns">Android Private DNS</a> use just the <code>dns.sainternet.xyz</code> or <code>unfiltered.dns.sainternet.xyz</code> domains without <code>proto://</code>, <code>/path</code> or <code>:port</code> sections.</li>
@@ -247,14 +247,15 @@
                 </tr>
               </table>
             </div>
-<!--
             <p>
               Notes:
             </p>
             <ul>
+<!--
               <li><a href="newsandupdates.html#thisiswhywecanthavenicethings">This Is Why We Can’t Have Nice Things</a></li>
-            </ul>
 -->
+              <li>Hover or mouse-over protocol links to show sainternet DNS IPv4 and IPv6 addresses.</li>
+            </ul>
           </div>
         </div>
       </main>
