saint-lascivious.github.io: add note to old blog new tricks
Changes to be committed:
 - modified:   .formatted/newsandupdates.html
 - modified:   newsandupdates.html

--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -220,7 +220,7 @@
           <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
             <h3 class="embiggen">Old Blog, New Tricks</h3>
             <p class="embiggen" id="datetime">
-              first posted on Wednesday, 13 September 2023 00:20+12:00 (NZST)<br>updated on Thursday, 14 September 2023 22:15+12:00 (NZST)
+              first posted on Wednesday, 13 September 2023 00:20+12:00 (NZST)<br>updated on Thursday, 21 September 2023 23:55+12:00 (NZST)
             </p>
             <p>
               If you <a href="connecttosainternet.html#connecttosainternet">Connect to Sainternet</a> using a domain and an <a href="portsandprotocols.html#encrypteddns" class="embiggen">Encrypted DNS</a> protocol, it is now possible to add an <code>unfiltered</code> identifier to your query destination for (mostly) unfiltered DNS resolution.
@@ -256,6 +256,7 @@
               Notes:
             </p>
             <ul>
+              <li>Hover or mouse-over encryption links to show sainternet DNS query paths.</li>
               <li>For <a href="connecttosainternet.html#androidprivatedns">Android Private DNS</a> use just the <code>unfiltered.dns.sainternet.xyz</code> domain without <code>proto://</code>, <code>/path</code> or <code>:port</code> sections.</li>
               <li>Filtered DNS resolution is available via <code>dns.sainternet.xyz</code>.</li>
           </div>
